--- a/Frontend/src/app/components/menus/starting-menu/starting-menu.component.html
+++ b/Frontend/src/app/components/menus/starting-menu/starting-menu.component.html
@@ -1,6 +1,6 @@
 <div class="d-flex flex-column justify-content-center align-items-center">
     <h1 class="mt-3">Online chess</h1>
-    <mat-card class="d-flex justify-content-center align-items-center flex-column ">
+    <mat-card class="d-flex flex-column justify-content-center align-items-center">
         <mat-card-title>Main menu</mat-card-title>
         <mat-card-content class="m-3">
                 <button mat-raised-button color="primary" routerLink='/create-lobby'>Create lobby</button>
